exports[`New sales order test > Create a new sales order > Add new product via Batch Entry #0`] = `
<form class="quick-input-container">
  <div
    class="form-group row  form-field-M_Product_ID form-field-M_HU_PI_Item_Product_ID"
  >
    <div class="form-control-label col-sm-3" title="Product">
      <span class="zoom-into">Product</span>
    </div>
    <div class="col-sm-9 ">
      <div class="input-body-container">
        <span></span>
        <div
          class="input-dropdown-container lookup-wrapper input-secondary pulse-off input-mandatory"
        >
          <div id="lookup_M_Product_ID" class="raw-lookup-wrapper">
            <div class="lookup-widget-wrapper lookup-widget-wrapper-bcg">
              <div class="input-dropdown input-block">
                <div class="input-editable">
                  <input
                    type="text"
                    class="input-field js-input-field font-weight-semibold"
                    autocomplete="new-password"
                    tabindex="0"
                    placeholder="none"
                  />
                </div>
              </div>
            </div>
          </div>
          <div id="lookup_M_HU_PI_Item_Product_ID" class="raw-lookup-wrapper">
            <div
              class="lookup-widget-wrapper lookup-widget-wrapper-bcg raw-lookup-disabled"
            >
              <div class="input-dropdown input-block">
                <div class="input-editable">
                  <input
                    type="text"
                    class="input-field js-input-field font-weight-semibold"
                    autocomplete="new-password"
                    tabindex="0"
                    placeholder="none"
                  />
                </div>
              </div>
            </div>
          </div>
          <div class="input-icon input-icon-lg lookup-widget-wrapper">
            <i class="meta-icon-preview"></i>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="form-group row  form-field-Qty">
    <div class="form-control-label col-sm-3" title="Quantity">Quantity</div>
    <div class="col-sm-9 ">
      <div class="input-body-container">
        <span></span>
        <div class="input-block input-mandatory input-secondary pulse-off">
          <span
            class="react-numeric-input"
            style="position: relative; display: inline-block;"
            ><input
              type="text"
              autocomplete="new-password"
              class="input-field js-input-field"
              placeholder="none"
              tabindex="0"
              title=""
              value=""
              pattern=".*"
              style="padding-right: 3ex; box-sizing: border-box; font-size: inherit; border: 1px solid rgb(204, 204, 204); border-radius: 2px; padding-left: 4px; display: block; -webkit-appearance: none; line-height: normal;"/><b
              style="position: absolute; right: 2px; width: 2.26ex; border-color: rgba(0, 0, 0, 0.1); border-style: solid; text-align: center; cursor: default; transition: all 0.1s; background: rgba(0, 0, 0, 0.1); box-shadow: rgba(0, 0, 0, 0.1) -1px -1px 3px inset, rgba(255, 255, 255, 0.7) 1px 1px 3px inset; top: 2px; bottom: 50%; border-radius: 2px 2px 0px 0px; border-width: 1px 1px 0px;"
              ><i
                style="position: absolute; top: 50%; left: 50%; width: 0px; height: 0px; border-width: 0px 0.6ex 0.6ex; border-color: transparent transparent rgba(0, 0, 0, 0.7); border-style: solid; margin: -0.3ex 0px 0px -0.56ex;"
              ></i></b
            ><b
              style="position: absolute; right: 2px; width: 2.26ex; border-color: rgba(0, 0, 0, 0.1); border-style: solid; text-align: center; cursor: default; transition: all 0.1s; background: rgba(0, 0, 0, 0.1); box-shadow: rgba(0, 0, 0, 0.1) -1px -1px 3px inset, rgba(255, 255, 255, 0.7) 1px 1px 3px inset; top: 50%; bottom: 2px; border-radius: 0px 0px 2px 2px; border-width: 0px 1px 1px;"
              ><i
                style="position: absolute; top: 50%; left: 50%; width: 0px; height: 0px; border-width: 0.6ex 0.6ex 0px; border-color: rgba(0, 0, 0, 0.7) transparent transparent; border-style: solid; margin: -0.3ex 0px 0px -0.56ex;"
              ></i></b
          ></span>
        </div>
      </div>
    </div>
  </div>
  <div class="hint">(Press 'Enter' to add)</div>
  <button type="submit" class="hidden-up"></button>
</form>
`;

exports[`New sales order test > Create a new sales order > Add new order line via Batch Entry #0`] = `
<form class="quick-input-container">
  <div
    class="form-group row  form-field-M_Product_ID form-field-M_HU_PI_Item_Product_ID"
  >
    <div class="form-control-label col-sm-3" title="Product">
      <span class="zoom-into">Product</span>
    </div>
    <div class="col-sm-9 ">
      <div class="input-body-container">
        <span></span>
        <div
          class="input-dropdown-container lookup-wrapper input-secondary pulse-off input-mandatory"
        >
          <div id="lookup_M_Product_ID" class="raw-lookup-wrapper">
            <div class="lookup-widget-wrapper lookup-widget-wrapper-bcg">
              <div class="input-dropdown input-block">
                <div class="input-editable">
                  <input
                    type="text"
                    class="input-field js-input-field font-weight-semibold"
                    autocomplete="new-password"
                    tabindex="0"
                    placeholder="none"
                  />
                </div>
              </div>
            </div>
          </div>
          <div id="lookup_M_HU_PI_Item_Product_ID" class="raw-lookup-wrapper">
            <div
              class="lookup-widget-wrapper lookup-widget-wrapper-bcg raw-lookup-disabled"
            >
              <div class="input-dropdown input-block">
                <div class="input-editable">
                  <input
                    type="text"
                    class="input-field js-input-field font-weight-semibold"
                    autocomplete="new-password"
                    tabindex="0"
                    placeholder="none"
                  />
                </div>
              </div>
            </div>
          </div>
          <div class="input-icon input-icon-lg lookup-widget-wrapper">
            <i class="meta-icon-preview"></i>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="form-group row  form-field-Qty">
    <div class="form-control-label col-sm-3" title="Quantity">Quantity</div>
    <div class="col-sm-9 ">
      <div class="input-body-container">
        <span></span>
        <div class="input-block input-mandatory input-secondary pulse-off">
          <span
            class="react-numeric-input"
            style="position: relative; display: inline-block;"
            ><input
              type="text"
              autocomplete="new-password"
              class="input-field js-input-field"
              placeholder="none"
              tabindex="0"
              title=""
              value=""
              pattern=".*"
              style="padding-right: 3ex; box-sizing: border-box; font-size: inherit; border: 1px solid rgb(204, 204, 204); border-radius: 2px; padding-left: 4px; display: block; -webkit-appearance: none; line-height: normal;"/><b
              style="position: absolute; right: 2px; width: 2.26ex; border-color: rgba(0, 0, 0, 0.1); border-style: solid; text-align: center; cursor: default; transition: all 0.1s ease 0s; background: rgba(0, 0, 0, 0.1); box-shadow: rgba(0, 0, 0, 0.1) -1px -1px 3px inset, rgba(255, 255, 255, 0.7) 1px 1px 3px inset; top: 2px; bottom: 50%; border-radius: 2px 2px 0px 0px; border-width: 1px 1px 0px;"
              ><i
                style="position: absolute; top: 50%; left: 50%; width: 0px; height: 0px; border-width: 0px 0.6ex 0.6ex; border-color: transparent transparent rgba(0, 0, 0, 0.7); border-style: solid; margin: -0.3ex 0px 0px -0.56ex;"
              ></i></b
            ><b
              style="position: absolute; right: 2px; width: 2.26ex; border-color: rgba(0, 0, 0, 0.1); border-style: solid; text-align: center; cursor: default; transition: all 0.1s ease 0s; background: rgba(0, 0, 0, 0.1); box-shadow: rgba(0, 0, 0, 0.1) -1px -1px 3px inset, rgba(255, 255, 255, 0.7) 1px 1px 3px inset; top: 50%; bottom: 2px; border-radius: 0px 0px 2px 2px; border-width: 0px 1px 1px;"
              ><i
                style="position: absolute; top: 50%; left: 50%; width: 0px; height: 0px; border-width: 0.6ex 0.6ex 0px; border-color: rgba(0, 0, 0, 0.7) transparent transparent; border-style: solid; margin: -0.3ex 0px 0px -0.56ex;"
              ></i></b
          ></span>
        </div>
      </div>
    </div>
  </div>
  <div class="hint">(Press 'Enter' to add)</div>
  <button type="submit" class="hidden-up"></button>
</form>
`;
